# stfx

./: Cargo.toml  README.md  justfile
.github/: copilot-instructions.md
bindings/stfx-js/: Cargo.toml
bindings/stfx-kotlin/: Cargo.toml
bindings/stfx-python/: Cargo.toml
bindings/stfx-wasm/: Cargo.toml
crates/crypto/: API.md
crates/crypto/src/: aead_impl.rs  lib.rs  random.rs
crates/crypto/src/hash/: mod.rs
crates/crypto/src/keys/: ed25519_impl.rs
crates/stfx/: Cargo.toml  README.md
crates/stfx-cesr/: Cargo.toml
crates/stfx-cred-exchange/: Cargo.toml
crates/stfx-crypto/: Cargo.toml  README.md
crates/stfx-crypto/benches/: crypto_benchmarks.rs
crates/stfx-crypto/src/: aead_impl.rs  encoding.rs  error.rs  lib.rs  traits.rs
crates/stfx-crypto/src/aead/: mod.rs
crates/stfx-crypto/src/hash/: blake2b256.rs  mod.rs  sha256.rs
crates/stfx-crypto/src/keys/: ed25519.rs  ed25519_impl.rs  mod.rs  x25519.rs
crates/stfx-crypto/src/rand/: mod.rs
crates/stfx-crypto/src/traits/: aead.rs  compat.rs  digest.rs  hasher.rs  key_agreement.rs  key_manager.rs  key_pair.rs  mod.rs  multibase.rs  multicodec.rs  randomness.rs  signer.rs  verifier.rs
crates/stfx-keys/: Cargo.toml
crates/stfx-layer2/: Cargo.toml
crates/stfx-layer3/: Cargo.toml
crates/stfx-server/: Cargo.toml
crates/stfx-test-utils/: Cargo.toml
crates/stfx-tsp/: Cargo.toml
crates/stfx-tsp/src/: cesr_utils.rs  crypto.rs  error.rs  handler.rs  lib.rs  message.rs  relationship.rs  routing.rs  signatures.rs  storage.rs  types.rs  wallet.rs
crates/stfx-tsp/tests/: integration_tests.rs
crates/stfx-vid/: Cargo.toml
crates/stfx-vid/src/: error.rs  lib.rs  traits.rs
crates/stfx-vid/src/implementations/: mod.rs  peer.rs
crates/stfx/src/: lib.rs
examples/crypto-hello-rust/: Cargo.toml
examples/crypto-hello-rust/src/: main.rs
examples/tsp-hello-rust/: Cargo.toml
