[workspace]
members = [
    "crates/stfx",
    "crates/stfx-*",
    "crates/crypto",
    "bindings/stfx-*",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/sovereigntrustframework/stfx"
authors = ["Alexandre Cardoso <alexandre.silva.cardoso@tecnico.ulisboa.pt>"]
rust-version = "1.75"

[workspace.dependencies]
# You will fill these later as you add real deps
