[package]
name = "stfx-crypto"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core cryptographic primitives for the Sovereign Trust Framework (STFx)."
repository = "https://github.com/sovereigntrustframework/stfx"
homepage = "https://stfx.dev"
readme = "README.md"
keywords = ["crypto", "did", "toip", "ssi", "stfx"]
categories = ["cryptography", "authentication", "data-structures"]
documentation = "https://docs.rs/stfx-crypto"
authors = ["Sovereign Trust Framework <maintainers@stfx.dev>"]

[dependencies]
ed25519-dalek = "2"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
blake2 = "0.10"
base64 = "0.22"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "crypto_benchmarks"
harness = false
