[package]
name = "stfx-tsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
# Core STFx crates
stfx-crypto = { path = "../stfx-crypto" }
stfx-vid = { path = "../stfx-vid" }
stfx-cesr = { path = "../stfx-cesr" }
stfx-store = { path = "../stfx-store" }
stfx-transport = { path = "../stfx-transport" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.8"

# Error handling
thiserror = "2.0"

# Hex encoding
hex = "0.4"

# VID/URL support
url = "2.5"

# Futures
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }

